[project]
name = "gomoku-gpu"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "numpy",
    "pandas",
    "pygame",
    "tqdm",
    "matplotlib",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
